# go-to-wheel

./: .gitignore  README.md  pyproject.toml  spec.md  test.yml
.github/workflows/: publish.yml  test.yml
go_to_wheel/: __init__.py
tests/: test_go_to_wheel.py
tests/go-example/: main.go
tests/go-example-subpkg/: go.mod
tests/go-example-subpkg/cmd/myapp/: main.go
tests/go-example-version/: go.mod  main.go
